Admin Event List

--- a/adminEvent.html
+++ b/adminEvent.html
@@ -70,12 +70,6 @@
                                         Profile
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a href="adminEditSite.html" class="nav-link text-white p-3 mb-2 sidebar-link">
-                                        <i class="fas fa-edit text-light fa-lg mr-3"></i>
-                                        Edit site
-                                    </a>
-                                </li>
                             </ul>
                         </div>
 
@@ -83,7 +77,7 @@
                         <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-nav-bar">
                             <div class="row align-item-center">
                                 <div class="col-md-4">
-                                    <h4 class="text-light text-uppercase mb-0 py-2">Dashboard</h4>
+                                    <h4 class="text-light text-uppercase mb-0 py-2">Events</h4>
                                 </div>
                                 <div class="col-md-5">
                                     <form action="">
@@ -142,6 +136,188 @@
                 </div>
             </div>
         </div>
+
+        <!--Main Body-->
+        <main class="events">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+
+                        <!--Heading-->
+                        <div class="row pt-md-5 mt-md-5 mb-md-3">
+                            <div class="col-lg-7 col-sm-5 ml-2">
+                                <h1 class="heading-1">Upcomming Events</h1>
+                                <p class="text-muted"> You have 3 upcomming events</p>
+                            </div>
+                            <div class="col-lg-4 col-sm-3 mt-4 text-right">
+                                <a href="#">
+                                    <button type="button" class="btn btn-success">+ Add Event</button>
+                                </a>
+                            </div>
+                        </div>
+                        <hr>
+
+                        <!--Events-->
+                        <div class="event-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Event Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                </div>
+                                <!--Event Details-->
+                                <div class="col-sm-8">
+                                    <a href="#">
+                                        <h2 class="eventName">Event Name</h2>
+                                    </a>
+                                    <p class="text-muted">
+                                        <span class="mr-3"><i class="far fa-calendar-alt mr-1">12th May 2020</i></span>
+                                        <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                    </p>
+                                    <p class="text-muted">
+                                        <span><i class="fas fa-map-marked-alt mr-2"></i>Nanyuki Stadium</span>
+                                    </p>
+                                    <div class="row tickets">
+                                        <div class="col-md-8">
+                                            <p>
+                                                <span class="mr-2"><i class="fas fa-ticket-alt"></i></span>
+                                                30 RSVPs
+                                            </p>
+                                        </div>
+
+                                        <div class="col-md-4 mr-auto">
+                                            <a href="#">
+                                                <button class="btn btn-success">Edit</button>
+                                            </a>
+                                            <a href="#">
+                                                <button class="btn btn-success">Cancel</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="event-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Event Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                </div>
+                                <!--Event Details-->
+                                <div class="col-sm-8">
+                                    <a href="#">
+                                        <h2 class="eventName">Event Name</h2>
+                                    </a>
+                                    <p class="text-muted">
+                                        <span class="mr-3"><i class="far fa-calendar-alt mr-1">12th May 2020</i></span>
+                                        <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                    </p>
+                                    <p class="text-muted">
+                                        <span><i class="fas fa-map-marked-alt mr-2"></i>Nanyuki Stadium</span>
+                                    </p>
+                                    <div class="row tickets">
+                                        <div class="col-md-8">
+                                            <p>
+                                                <span class="mr-2"><i class="fas fa-ticket-alt"></i></span>
+                                                30 RSVPs
+                                            </p>
+                                        </div>
+
+                                        <div class="col-md-4 mr-auto">
+                                            <a href="#">
+                                                <button class="btn btn-success">Edit</button>
+                                            </a>
+                                            <a href="#">
+                                                <button class="btn btn-success">Cancel</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="event-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Event Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                </div>
+                                <!--Event Details-->
+                                <div class="col-sm-8">
+                                    <a href="#">
+                                        <h2 class="eventName">Event Name</h2>
+                                    </a>
+                                    <p class="text-muted">
+                                        <span><i class="far fa-calendar-alt mr-2">12th May 2020</i></span>
+                                        <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                    </p>
+                                    <p class="text-muted">
+                                        <span><i class="fas fa-map-marked-alt mr-2"></i>Nanyuki Stadium</span>
+                                    </p>
+                                    <div class="row tickets">
+                                        <div class="col-md-8">
+                                            <p>
+                                                <span class="mr-2"><i class="fas fa-ticket-alt"></i></span>
+                                                30 RSVPs
+                                            </p>
+                                        </div>
+
+                                        <div class="col-md-4 mr-auto">
+                                            <a href="#">
+                                                <button class="btn btn-success">Edit</button>
+                                            </a>
+                                            <a href="#">
+                                                <button class="btn btn-success">Cancel</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="event-post mb-3 py-4 px-4">
+                            <div class="row">
+                                <!--Event Image-->
+                                <div class="col-sm-4">
+                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                </div>
+                                <!--Event Details-->
+                                <div class="col-sm-8">
+                                    <a href="#">
+                                        <h2 class="eventName">Event Name</h2>
+                                    </a>
+                                    <p class="text-muted">
+                                        <span><i class="far fa-calendar-alt mr-2">12th May 2020</i></span>
+                                        <span><i class="far fa-clock mr-1"></i>10:00 am</span>
+                                    </p>
+                                    <p class="text-muted">
+                                        <span><i class="fas fa-map-marked-alt mr-2"></i>Nanyuki Stadium</span>
+                                    </p>
+                                    <div class="row tickets">
+                                        <div class="col-md-8">
+                                            <p>
+                                                <span class="mr-2"><i class="fas fa-ticket-alt"></i></span>
+                                                30 RSVPs
+                                            </p>
+                                        </div>
+
+                                        <div class="col-md-4 mr-auto">
+                                            <a href="#">
+                                                <button class="btn btn-success">Edit</button>
+                                            </a>
+                                            <a href="#">
+                                                <button class="btn btn-success">Cancel</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </main>
 
     </body>
 
