--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -95,7 +95,7 @@
                                                     Nanyuki, Kenya
                                                 </strong>
                                                 <br><br>
-                                                Please make donations payable to <strong>"Kenya Scoliosis Foundation"</strong> and indicate any special designations on the memo line of your check
+                                                Please make donations payable to <strong>"Laikipia Scoliosis Support Group"</strong> for and behalf of Kenya Scoliosis Foundation and indicate any special designations on the memo line of your check
                                             </p>
                                         </div>
                                     </div>
