--- a/ourGoals.html
+++ b/ourGoals.html
@@ -67,32 +67,23 @@
             <div class="section-10">
                 <div class="container text-center">
                     <div class="row justify-content-center text-center">
-                        <div class="col-md-8">
-                            <div class="card">
-                                <img src="images/goals&values.JPG" alt="img8" class="card-img-top">
-                                <div class="card-body">
-                                    <h1 class="card-title">Our Goal</h1>
-                                    <p class="card-text">
-                                        Our goal is to create a resource centre for medical professionals and researchers to visit regularly to check on childre and 
-                                        adults in order to provide evidence based treatment for spinal disorders.
-                                    </p>
-                                    <h1 class="card-title">Our Values</h1>
-                                    <p class="card-text">
-                                        Responsiveness
-                                        <br>
-                                        Partnerships
-                                        <br>
-                                        passion
-                                        <br>
-                                        Empowerment
-                                        <br>
-                                        Professionalism
-                                    </p>
-                                    <a href="donate.html">
-                                        <input type="button" value="Help Us" class="btn">
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="col-md-5">
+                            <h1 class="text-white mt-3">Our Goal</h1>
+                            <p class="para-1">
+                                Our goal is to create a resource center for medical proffesionals and researchers to visit regularly tocheck on children and 
+                                adults in order to provide evidence based treatement for spinal disorders.
+                            </p>
+                            <h1 class="text-white mt-0">Our Values</h1>
+                            <p class="para-1">
+                                Responsiveness, Partnerships, Passion, Empowerment and Professionalism
+                            </p>
+                            <a href="donateCreditCard.html">
+                                <input type="button" value="Help Us" class="btn">
+                            </a>
+                        </div>
+
+                        <div class="col-md-7">
+                            <img src="images/goals&values.JPG" alt="ourGoals" width="590px" class="mt-3 mb-3">
                         </div>
                     </div>
                 </div>
