--- a/ourMission.html
+++ b/ourMission.html
@@ -66,22 +66,20 @@
             <!--Section 9-->
             <div class="section-9">
                 <div class="container text-center">
-                    <div class="row justify-content-center text-center">
-                        <div class="col-md-8">
-                            <div class="card">
-                                <img src="images/ourMission.JPG" alt="img8" class="card-img-top">
-                                <div class="card-body">
-                                    <h1 class="card-title">Our Mission</h1>
-                                    <p class="card-text">
-                                        <strong>Kenya Scoliosis Foundation</strong> was created to promote public awareness, screen, research, train nationwide 
-                                        Educational Campaigns  to highlight the vital importance of early diagnosis and management of children and adults suffering 
-                                        from disabling and debilitating condition.
-                                    </p>
-                                    <a href="donate.html">
-                                        <input type="button" value="Help Us" class="btn">
-                                    </a>
-                                </div>
-                            </div>
+                    <div class="row justify-content-center text-center ">
+                        <div class="col-md-7 mb-5">
+                            <img src="images/ourMission.JPG" alt="ourMission" width="590" class="mt-3 mb-3">
+                        </div>
+                        <div class="col-md-5">
+                            <h1 class="text-white mt-3">Our Mission</h1>
+                            <p class="para-1">
+                                <strong>Kenya Scoliosis Foundation</strong> was created to promote oublic aweareness, screening, research, train nationwide, 
+                                Educational campaigns to highlight the vital importance of early diagnosis and management of children and adults suffering 
+                                from disabling and debilitating condition. 
+                            </p>
+                            <a href="donateCreditCard.html">
+                                <input type="button" value="Help us" class="btn">
+                            </a>
                         </div>
                     </div>
                 </div>
