--- a/blog.html
+++ b/blog.html
@@ -103,6 +103,18 @@
                                     you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary 
                                     of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
                                 </p>
+
+                                <div class="form-group"></div>
+                                
+                                <form action="#">
+                                    <div class="mb-3">
+                                        <label for="commentArea" class="text-muted font-weight-bold">Comment</label>
+                                        <br>
+                                        <textarea id="commentArea" rows="3" class="form-control" placeholder="Leave a comment" required></textarea>
+                                    </div>
+    
+                                    <button type="submit" class="btn btn-success mb-5">Submit</button>
+                                </form>
                             </article>
                         </div>
 
@@ -115,7 +127,7 @@
                                     <div class="row">
                                         <!--Blog Details-->
                                         <div class="article-heading">
-                                            <a href="#" class=" text-dark">
+                                            <a href="blog.html" class=" text-dark">
                                                 <h5>My blog post title</h5>
                                             </a>
                                             <p class="text-muted">
@@ -129,7 +141,7 @@
                                     <div class="row">
                                         <!--Blog Details-->
                                         <div class="article-heading">
-                                            <a href="#" class=" text-dark">
+                                            <a href="blog.html" class=" text-dark">
                                                 <h5>My blog post title</h5>
                                             </a>
                                             <p class="text-muted">
