Credit card donation

--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -112,7 +112,7 @@
                                         <hr>
                                         <form action="donateThankYou.html" class="px-4 donation-form">
                                             <div class="form-group">
-                                                <label for="amount" class="text-muted">Amount</label> <br>
+                                                <label for="amount" class="text-muted">Amount ($)</label> <br>
                                                 <input type="number" placeholder="Amount" id="amount" class="form-control amount" required>
                                             </div>
 
