--- a/donnateMpesa.html
+++ b/donnateMpesa.html
@@ -112,7 +112,7 @@
                                         <hr>
                                         <form action="donateThankYou.html" class="px-4 donation-form">
                                             <div class="form-group">
-                                                <label for="amount" class="text-muted">Amount</label> <br>
+                                                <label for="amount" class="text-muted">Amount (KES)</label> <br>
                                                 <input type="number" placeholder="Amount" id="amount" class="form-control amount" required>
                                             </div>
 
@@ -129,6 +129,17 @@
                                                         </a>
                                                     </li>
                                                 </ul>
+                                            </div>
+
+                                            <div class="form-row mt-3">
+                                                <div class="col">
+                                                    <label for="firstName" class="text-muted">First Name</label> <br>
+                                                    <input type="text" class="form-control" id="firstName" placeholder="First Name" required>
+                                                </div>
+                                                <div class="col">
+                                                    <label for="lastName" class="text-muted">Last Name</label> <br>
+                                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
+                                                </div>
                                             </div>
 
                                             <h6 class="mt-4">Please follow the process below:</h6>
