--- a/theScolioTalk.html
+++ b/theScolioTalk.html
@@ -295,7 +295,7 @@
                                             <div class="row">
                                                 <!--Blog Details-->
                                                 <div class="article-heading">
-                                                    <a href="#" class=" text-dark">
+                                                    <a href="blog.html" class=" text-dark">
                                                         <h5>My blog post title</h5>
                                                     </a>
                                                     <p class="text-muted">
@@ -309,7 +309,7 @@
                                             <div class="row">
                                                 <!--Blog Details-->
                                                 <div class="article-heading">
-                                                    <a href="#" class=" text-dark">
+                                                    <a href="blog.html" class=" text-dark">
                                                         <h5>My blog post title</h5>
                                                     </a>
                                                     <p class="text-muted">
@@ -323,7 +323,7 @@
                                             <div class="row">
                                                 <!--Blog Details-->
                                                 <div class="article-heading">
-                                                    <a href="#" class=" text-dark">
+                                                    <a href="blog.html" class=" text-dark">
                                                         <h5>My blog post title</h5>
                                                     </a>
                                                     <p class="text-muted">
@@ -337,7 +337,7 @@
                                             <div class="row">
                                                 <!--Blog Details-->
                                                 <div class="article-heading">
-                                                    <a href="#" class=" text-dark">
+                                                    <a href="blog.html" class=" text-dark">
                                                         <h5>My blog post title</h5>
                                                     </a>
                                                     <p class="text-muted">
@@ -351,7 +351,7 @@
                                             <div class="row">
                                                 <!--Blog Details-->
                                                 <div class="article-heading">
-                                                    <a href="#" class=" text-dark">
+                                                    <a href="blog.html" class=" text-dark">
                                                         <h5>My blog post title</h5>
                                                     </a>
                                                     <p class="text-muted">
@@ -365,7 +365,7 @@
                                             <div class="row">
                                                 <!--Blog Details-->
                                                 <div class="article-heading">
-                                                    <a href="#" class=" text-dark">
+                                                    <a href="blog.html" class=" text-dark">
                                                         <h5>My blog post title</h5>
                                                     </a>
                                                     <p class="text-muted">
