--- a/adminEvent.html
+++ b/adminEvent.html
@@ -186,10 +186,10 @@
 
                                         <div class="col-md-4 mr-auto">
                                             <a href="adminEditEvent.html">
-                                                <button class="btn btn-success">Edit</button>
+                                                <button class="btn btn-success">Details</button>
                                             </a>
                                             <a href="#">
-                                                <button class="btn btn-success" data-toggle="modal" data-target="#cancelEvent">Cancel Event</button>
+                                                <button class="btn btn-success" data-toggle="modal" data-target="#cancelEvent">Cancel</button>
                                             </a>
                                         </div>
                                     </div>
@@ -225,10 +225,10 @@
 
                                         <div class="col-md-4 mr-auto">
                                             <a href="adminEditEvent.html">
-                                                <button class="btn btn-success">Edit</button>
+                                                <button class="btn btn-success">Details</button>
                                             </a>
                                             <a href="#">
-                                                <button class="btn btn-success" data-toggle="modal" data-target="#cancelEvent">Cancel Event</button>
+                                                <button class="btn btn-success" data-toggle="modal" data-target="#cancelEvent">Cancel</button>
                                             </a>
                                         </div>
                                     </div>
@@ -264,10 +264,10 @@
 
                                         <div class="col-md-4 mr-auto">
                                             <a href="adminEditEvent.html">
-                                                <button class="btn btn-success">Edit</button>
+                                                <button class="btn btn-success">Details</button>
                                             </a>
                                             <a href="#">
-                                                <button class="btn btn-success"  data-toggle="modal" data-target="#cancelEvent">Cancel Event</button>
+                                                <button class="btn btn-success"  data-toggle="modal" data-target="#cancelEvent">Cancel</button>
                                             </a>
                                         </div>
                                     </div>
@@ -303,10 +303,10 @@
 
                                         <div class="col-md-4 mr-auto">
                                             <a href="adminEditEvent.html">
-                                                <button class="btn btn-success">Edit</button>
+                                                <button class="btn btn-success">Details</button>
                                             </a>
                                             <a href="#">
-                                                <button class="btn btn-success" data-toggle="modal" data-target="#cancelEvent">Cancel Event</button>
+                                                <button class="btn btn-success" data-toggle="modal" data-target="#cancelEvent">Cancel</button>
                                             </a>
                                         </div>
                                     </div>
