Credit card donate

--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -97,6 +97,7 @@
                                                 <br><br>
                                                 Please make donations payable to <strong>"Laikipia Scoliosis Support Group"</strong> for and behalf of Kenya Scoliosis Foundation and indicate any special designations on the memo line of your check
                                             </p>
+                                        </div>
                                     </div>
                                 </div>
 
