--- a/adminEditEvent.html
+++ b/adminEditEvent.html
@@ -149,7 +149,7 @@
                                 <p class="text-muted ml-5 path">
                                     <a href="adminEvent.html" class="text-muted">Events</a> 
                                     <i class="fas fa-chevron-right"></i>
-                                    Event Name
+                                    Event Details
                                 </p>
                                 <h1 class="heading-1 mb-5">
                                     <a href="adminEvent.html" class="mr-2">
@@ -170,7 +170,7 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-muted" href="#">
+                                        <a class="nav-link text-muted" href="adminEventBookings.html">
                                           <h4>Event Bookings</h4>
                                         </a>
                                     </li>
@@ -252,7 +252,7 @@
                                 </div>
 
                                 <div class="update text-center mb-5">
-                                    <button type="submit" class="btn btn-success">Submit</button>
+                                    <button type="submit" class="btn btn-success">Update</button>
                                 </div>
                             </form>
                         </div>
