Credit card donate

--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -172,7 +172,7 @@
                                                 <textarea class="form-control" id="Textarea" placeholder="leave a comment (Optional)" rows="3"></textarea>
                                             </div>
 
-                                            <button type="submit" class="btn btn-success mb-5 donate-btn">Donate $</button>
+                                            <button type="submit" class="btn btn-success mb-5" id="donate-btn">Donate $</button>
                                         </form>
                                     </div>
                                 </div>
