--- a/eventDetails.html
+++ b/eventDetails.html
@@ -36,6 +36,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                 <a href="ourMission.html" class="dropdown-item">Our Mission</a>
                                 <a href="ourGoals.html" class="dropdown-item">Our Goals & Values</a>
+                                <a href="ourLeadership.html" class="dropdown-item">Our Leadership</a>
                                 <a href="scoliosisAwarenessMonth.html" class="dropdown-item">Aweareness Month</a>
                                 <a href="finances.html" class="dropdown-item">Finances Accountability</a>
                                 <a href="facilitation.html" class="dropdown-item">Facilitation</a>
