--- a/adminEditEvent.html
+++ b/adminEditEvent.html
@@ -186,7 +186,7 @@
                                     <h3 class="card-title mt-3 ml-3">General Information</h3>
                                     <hr class="mt-2">
                                     <div class="row mb-3">
-                                        <div class="col-md-7 ml-4">
+                                        <div class="col-md-7 px-5">
                                             <div class="form-group">
                                                 <label for="eventName" class="text-muted">Event Name</label>
                                                 <br>
@@ -197,7 +197,16 @@
                                                 <textarea id="eventDescription" rows="4" class="form-control" placeholder="Short Description of the Event" required></textarea>
                                             </div>
                                         </div>
-                                        <div class="col-md-5"></div>
+                                        <div class="col-md-5 px-4 mt-1 mb-4">
+                                            <div class="container">
+                                                <div class="box">
+                                                    <div class="images"></div>
+                                                    <div class="button">
+                                                        Change Image
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -286,5 +295,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="js/animation.js"></script>
+    <script src="js/animation.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/functionality.js"></script>
+
 </html>
