--- a/adminEditEvent.html
+++ b/adminEditEvent.html
@@ -219,7 +219,7 @@
                                             <div class="form-group">
                                                 <label for="eventName" class="text-muted">Date</label>
                                                 <br>
-                                                <input type="date" id="eventName" class="form-control eventName" placeholder="Event Name" required>
+                                                <input type="text" id="date-input" class="form-control eventName datedropper-init" placeholder="Event Name" data-datedropper required>
                                             </div>
                                         </div>
                                         <div class="col-md-6 px-5">
@@ -297,5 +297,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/functionality.js"></script>
+    <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
 
 </html>
