--- a/adminEvent.html
+++ b/adminEvent.html
@@ -150,7 +150,7 @@
                                 <p class="text-muted"> You have 4 upcomming events</p>
                             </div>
                             <div class="col-lg-4 col-sm-3 mt-4 text-right">
-                                <a href="#">
+                                <a href="adminAddEvent.html">
                                     <button type="button" class="btn btn-success">+ Add Event</button>
                                 </a>
                             </div>
