--- a/adminProfile.html
+++ b/adminProfile.html
@@ -70,12 +70,6 @@
                                         Profile
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a href="adminEditSite.html" class="nav-link text-white p-3 mb-2 sidebar-link">
-                                        <i class="fas fa-edit text-light fa-lg mr-3"></i>
-                                        Edit site
-                                    </a>
-                                </li>
                             </ul>
                         </div>
 
@@ -83,7 +77,7 @@
                         <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-nav-bar">
                             <div class="row align-item-center">
                                 <div class="col-md-4">
-                                    <h4 class="text-light text-uppercase mb-0 py-2">Dashboard</h4>
+                                    <h4 class="text-light text-uppercase mb-0 py-2">Profile</h4>
                                 </div>
                                 <div class="col-md-5">
                                     <form action="">
@@ -143,10 +137,84 @@
             </div>
         </div>
 
+        <!--Main Body-->
+        <main class="events">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+
+                        <!--Heading-->
+                        <div class="row pt-md-5 mt-md-5 mb-md-3">
+                            <div class="col-lg-7 col-sm-5 ml-5">
+                                <h1 class="heading-1">User Profile</h1>
+                            </div>
+                            <div class="col-lg-4 col-sm-3 mt-4 text-right">
+                                <a href="adminAddUser.html">
+                                    <button type="button" class="btn btn-success">+ Add User</button>
+                                </a>
+                            </div>
+                        </div>
+                        <hr>
+
+                        <!--Profile-->
+                        <div class="card mt-5 mr-md-5 ml-md-5 mb-5 userInfo">
+                            <h3 class="card-title mt-3 ml-3">User Information</h3>
+                            <hr class="mt-2">
+                            <div class="row mb-3">
+                                <div class="col-md-7 px-5">
+                                    <div class="form-group">
+                                        <label for="userFullName" class="text-muted">Full Name*</label>
+                                        <br>
+                                        <input type="text" id="userFullName" class="form-control" placeholder="" required>
+                                        <br>
+
+                                        <label for="userRole" class="text-muted">Role*</label>
+                                        <br>
+                                        <input type="text" id="userRole" class="form-control" placeholder="" required>
+                                        <br>
+
+                                        <label for="userEmail" class="text-muted">Email*</label>
+                                        <br>
+                                        <input type="text" id="userEmail" class="form-control" placeholder="" required>
+                                        <br>
+
+                                        <label for="userPassword" class="text-muted">Password*</label>
+                                        <br>
+                                        <input type="password" id="userPassword" class="form-control" placeholder="" required>
+                                        <br>
+
+                                        <label for="userPasswordConfirm" class="text-muted">Confirm Password*</label>
+                                        <br>
+                                        <input type="text" id="userPasswordConfirm" class="form-control" placeholder="" required>
+                                        <br>
+                                    </div>
+                                </div>
+                                <div class="col-md-5 px-4 mt-1 mb-4">
+                                    <div class="container">
+                                        <div class="box">
+                                            <div class="images"></div>
+                                            <div class="button">
+                                                Upload Image
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="update text-center mb-5">
+                                <button type="submit" class="btn btn-success">Update</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </main>
+
     </body>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/animation.js"></script>
+    <script type="text/javascript" src="js/functionality.js"></script>
 </html>
