Credit Card Donation

--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -144,6 +144,12 @@
                                             </div>
 
                                             <div class="form-group"></div>
+
+                                            <div class="form-group">
+                                                <label for="donorEmail" class="text-muted">Email</label> <br>
+                                                <input type="text" placeholder="Email" id="donorEmail" class="form-control" required>
+                                            </div>
+
                                             <div class="form-group">
                                                 <label for="creditCard" class="text-muted">Credit Card</label>
                                                 <div class="input-group flex-nowrap">
